--- a/webserver/c/Makefile
+++ b/webserver/c/Makefile
@@ -1,11 +1,11 @@
 CFLAGS= -g -Wall -D_BSD_SOURCE
 STD= -std=c99
-SRC= tcpserver2.c main.c
-LIB= -pthread
+SRC= ae.c cServer.c
+TARGET= cSrv
 
 all: $(SRC)
-	$(CC) $(CFLAGS) $(STD) $(SRC) $(LIB) -o svr
+	$(CC) $(CFLAGS) $(STD) $(SRC)  -o $(TARGET)
 
 clean:
-	rm -f svr
+	rm -f $(TARGET)
 	rm -rf *.dSYM
